# Bot-for-Searching-TRG-Sessions

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  bot.py
bot/config/: __init__.py  default.py  utils.py
bot/controllers/: __init__.py  test.py
bot/db/: __init__.py
bot/db/connection/: __init__.py  session.py
bot/db/migrator/: env.py
bot/db/migrator/versions/: 2025-01-29_c03faf657629_.py  2025-02-04_7534a9361ad6_.py  2025-02-06_a6a7a6f13e00_.py  2025-02-07_c4049f5263e5_.py
bot/db/models/: __init__.py  game.py  genre.py  logs.py  recommendation.py  review.py  session.py  session_player.py  user.py  user_genre.py
bot/exceptions/: registration_exceptions.py
bot/server/: __init__.py
bot/server/registration/: __init__.py  registration_controller.py  registration_dao.py  registration_service.py
bot/server/start_chat/: __init__.py  start_chat_controller.py  start_chat_dao.py  start_chat_service.py
db/: __init__.py
db/models/: game.py  recommendation.py  session.py  session_player.py  user.py  user_genre.py
